Replace deprecated new URL constructors in appserv-tests ejb/jms/jdbc/webservice devtests
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>