@@ -45,8 +45,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + "/"
-                          + contextRoot + "/index.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + "/"
+                          + contextRoot + "/index.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
