@@ -111,8 +111,8 @@ public class Client {
             c = EJBContainer.createEJBContainer(p);
         // ok now let's look up the EJB...
             System.out.println("Testing EJB via REST...");
-            System.out.println("EJB said: " + testResourceAtUrl(new URL(LOCALHOST + appName + "-web/test/simple")));
-            System.out.println("JPA call returned: " + testResourceAtUrl(new URL(LOCALHOST + appName + "-web/test/jpa")));
+            System.out.println("EJB said: " + testResourceAtUrl(URI.create(LOCALHOST + appName + "-web/test/simple").toURL()));
+            System.out.println("JPA call returned: " + testResourceAtUrl(URI.create(LOCALHOST + appName + "-web/test/jpa").toURL()));
 
         } catch (Exception e) {
             pass = false;
